--- a/microsites_ptp/workflows/laravel.yml
+++ b/microsites_ptp/workflows/laravel.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer require laravel/breeze --dev
+      run: composer require laravel/breeze --dev && php artisan breeze:install blade
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
