Config .yml config

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,7 +19,9 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer require laravel/breeze --dev && php artisan breeze:install blade
+      run: composer require laravel/breeze --dev
+    - name: Install other dependencie
+      run: php artisan breeze:install blade
       working-directory: microsites_ptp
     - name: Generate key
       run: php artisan key:generate
