--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,10 +22,10 @@ jobs:
       run: composer require laravel/breeze --dev
     - name: Install other dependencie
       run: php artisan breeze:install blade
-      working-directory: /home/runner/work/microsites_ptp/microsites_ptp/artisan
+      working-directory: microsites_ptp/artisan
     - name: Generate key
       run: php artisan key:generate
-      working-directory: /home/runner/work/microsites_ptp/microsites_ptp/artisan
+      working-directory: microsites_ptp/artisan
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
