--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,12 +20,12 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer require laravel/breeze --dev
-    - name: Install other dependencie
-      run: php artisan breeze:install blade
-      working-directory: microsites_ptp/artisan
+    #- name: Install other dependencie
+    #  run: php artisan breeze:install blade
+    #  working-directory: microsites_ptp/artisan
     - name: Generate key
       run: php artisan key:generate
-      working-directory: microsites_ptp/artisan
+      working-directory: microsites_ptp
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
