--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,9 +23,9 @@ jobs:
     #- name: Install other dependencie
     #  run: php artisan breeze:install blade
     #  working-directory: microsites_ptp/artisan
-    - name: Generate key
-      run: php artisan key:generate
-      working-directory: microsites_ptp
+    #- name: Generate key
+    #  run: php artisan key:generate
+    #  working-directory: microsites_ptp
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
