--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,8 +26,8 @@ jobs:
     #- name: Generate key
     #  run: php artisan key:generate
     #  working-directory: microsites_ptp
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+    #- name: Directory Permissions
+    #  run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
       run: |
         mkdir -p database
