--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
         coverage: none
 
     - name: Install Composer dependencies
-      run: composer update --prefer-dist --no-progress --no-suggest
-
+      #run: composer update --prefer-dist --no-progress --no-suggest
+      run: composer require laravel/breeze --dev
     - name: Copy .env.example to .env
       #run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       run: cp .env.example .env
