--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       #run: composer update --prefer-dist --no-progress --no-suggest
      # run: composer require laravel/breeze --dev
     - name: Copy .env.example to .env
-      #run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      run: cp .env.example .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      #run: cp .env.example .env
 
     - name: Generate application key
       run: php artisan key:generate
