--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,11 @@ jobs:
     #- name: Generate application key
      # run: php artisan key:generate
 
-    - name: Configure database
-      run: |
-        php artisan config:clear
-        php artisan config:cache
-        php artisan migrate --force
+    #- name: Configure database
+     # run: |
+      #  php artisan config:clear
+       # php artisan config:cache
+        #php artisan migrate --force
       env:
         DB_CONNECTION: mysql
         DB_HOST: 127.0.0.1
