--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,54 @@
-name: Laravel
+name: Laravel CI
+
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up PHP
+      #uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env
+        extensions: mbstring, xml, ctype, json, mysql, pdo_mysql
+        ini-values: post_max_size=256M, upload_max_filesize=256M
+        coverage: none
+
+    #- name: Install Composer dependencies
+      #run: composer update --prefer-dist --no-progress --no-suggest
+     # run: composer require laravel/breeze --dev
+    - name: Copy .env.example to .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer require laravel/breeze --dev
-    #- name: Install other dependencie
-    #  run: php artisan breeze:install blade
-    #  working-directory: microsites_ptp/artisan
-    #- name: Generate key
-    #  run: php artisan key:generate
-    #  working-directory: microsites_ptp
-    #- name: Directory Permissions
-    #  run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.mysql
-    #- name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-    #  env:
-    #    DB_CONNECTION: mysql
-    #    DB_DATABASE: database/database.mysql
-    #  run: php artisan test
+      #run: cp .env.example .env
+
+    #- name: Generate application key
+     # run: php artisan key:generate
+
+    #- name: Configure database
+     # run: |
+      #  php artisan config:clear
+       # php artisan config:cache
+        #php artisan migrate --force
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
+        DB_PORT: 3306
+        DB_DATABASE: microsites
+        DB_USERNAME: root
+        DB_PASSWORD: 
+
+    #- name: Run tests
+     # run: vendor/bin/phpunit
